# pytorch-roadmap-lab

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 01-tensors.md  02-autograd.md  03-dataset-dataloader.md  04-model-training.md  05-gpu-save-tensorboard.md  06-debug-checklist.md  07-faq.md
examples/: 01_tensor_playground.py  02_autograd_probe.py  03_train_toy_classifier.py
exercises/: README.md  custom_dataset_todo.py  shape_drills.py
scripts/: plot_decision_boundary.py  render_readme_preview.py
src/pytorch_roadmap_lab/: __init__.py  data.py  models.py  training.py
tests/: test_data_and_model.py  test_project_files.py  test_training_smoke.py
