[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-roadmap-lab"
version = "0.1.0"
description = "A project-first PyTorch learning roadmap for beginners."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.8",
    "pytest>=8.0",
    "tensorboard>=2.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

